<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChiTietActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toobar"
        android:background="#1DE1E8"
        app:title="Chi Tiết Chuyến Xe"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <FrameLayout
            android:id="@+id/framegiohang"
            android:layout_marginRight="10dp"
            android:layout_gravity="right"
            android:layout_width="55dp"
            android:layout_height="?attr/actionBarSize">
            <com.nex3z.notificationbadge.NotificationBadge
                android:id="@+id/menu_sl"
                android:layout_gravity="top|right"
                android:layout_width="28dp"
                android:layout_height="28dp"/>
            <ImageView
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_wallet"
                android:layout_width="35dp"
                android:layout_height="35dp"/>
        </FrameLayout>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:id="@+id/layout1"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/toobar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imgchitiet"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout2"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintTop_toBottomOf="@+id/layout1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/itemct_ten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/t_n_xe"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/itemct_loai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lo_i_xe_gi_ng_n_m"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="12dp"/>

        <TextView
            android:id="@+id/itemct_diadiem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s_i_g_n_long_xuy_n"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="12dp"/>
        <TextView
            android:id="@+id/itemct_Gio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gi_10_00_12_00"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="12dp"/>
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:padding="2dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="Số vé:"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>
        <TextView
            android:id="@+id/itemct_gia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gi_250000"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16dp"
            android:layout_marginLeft="12dp"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout2"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp">
        <Button
            android:id="@+id/btnthemvaogiohang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#F48A9C"
            android:text="@string/th_m_v_m_i"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>